# BWFYQ32019-CXX17-CMake-OpenCV-Dice

./: .gitignore  README.md
src/: BuildIssues.md  CMakeLists.txt  main.cpp
src/annotation/: Chunk.h  Defer.h  Endian.h  JpegAnnotation.cpp  JpegAnnotation.h  Strings.h  VecByte.h  main.cpp
src/cmake/: DebugBuildEnv.cmake  OSDetection.cmake
src/dice/: DiceProc.cpp  DiceProc.h  JpegFile.cpp  JpegFile.h
src/dice/transformers/: AdaptiveThresholder.cpp  AdaptiveThresholder.h  Colorer.cpp  Colorer.h  Contouring.cpp  Contouring.h  Edger.cpp  Edger.h  ImageOrigin.cpp  ImageOrigin.h  Terminus.cpp  Terminus.h  Thresholder.cpp  Thresholder.h  XformerBase.cpp  XformerBase.h
src/dice/transformers/bases/: Identifiable.cpp  Identifiable.h  QT5Xformer.cpp  QT5Xformer.h  Xformer.cpp  Xformer.h  XformerBase.h
src/dice/ui/: CVQTTag.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindowListColDelegate.h  QT5Main.cpp  QT5Main.h
src/dice/ui/widgets/: CVQTImageToolbar.cpp  CVQTImageToolbar.h  CVQTImageToolbar.ui  CVQTPicker.cpp  CVQTPicker.h  CVQTPicker.ui  CVQTWidget.h  InvokeDelegate.h  UiPredefine.h
src/dice/utils/: algorithm.h  hsv.h
src/tests/: CMakeLists.txt  OnePXJpeg.hpp  ResourceReader.cpp  ResourceReader.h  Testing.hpp  catch.hpp  main.cpp  primary.cpp
src/tests/CVDice/transformers/: basicDiceSourceImages.Test.cpp
src/tests/CVDice/utils/: algorithm.Test.cpp  hsv.Test.cpp
src/tests/LibCVDiceAnnotation/: Chunk.Test.cpp  JpegAnnotation.Test.cpp
stock/Images/: README.md
